--- a/indice.tex
+++ b/indice.tex
@@ -40,7 +40,7 @@
 \usepackage{titlesec}
 
 \titleformat{\chapter}{\normalfont\huge\bf}{\thechapter.}{20pt}{\huge\bf}
-\titleformat{\section}{\normalfont}{\thesection.}{18pt}{\normalfont\bf}
+\titleformat{\section}{\normalfont\bf}{\thesection.}{18pt}{\normalfont\bf}
 \titleformat{\subsection}{\normalfont}{\thesubsection.}{16pt}{\normalfont\bf}
 
 
@@ -60,14 +60,18 @@
 	{\large Tesi di Laurea Magistrale in Informatica}\\[0.2truecm]
 	%{\Large Informatica}\\
 	\vfill\vfill
-	{\LARGE {\bf Titolo}}
+	{\LARGE {\bf Utilizzo di tecniche di analisi semantica finalizzate ad evitare il privacy leakage}}
 	
 	\vfill\vfill
-	
-	
-	\ \ \ \ \ \ \ {\bf Docente} \hfill {\bf Candidato}\ \ \\
-	Prof.ssa \textbf{Delfina Malandrino} \hfill  \textbf{Francesco Vicidomini}
-	\centerline{\hfill Matricola: 051210533}
+	%\begin{tabular}
+	\begin{table}[h]
+    \centering
+    \begin{tabular}{p{10cm}p{5cm}}
+    \textbf{Relatori:} & \textbf{Candidato:} \\
+    Prof.ssa Delfina Malandrino & Francesco Vicidomini \\
+    Prof. Rocco Zaccagnino & \multicolumn{1}{l}{}
+    \end{tabular}
+    \end{table}
 	
 	
 	\vfill
