Edited cap4, added Appendice, edited sec 1.2

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -30,5 +30,183 @@ Constant, Noah  and Guajardo-Cespedes, Mario  and Yuan, Steve  and
 Tar, Chris  and Strope, Brian  and Kurzweil, Ray\newline
 \textit{Universal Sentence Encoder}, 2018
 
+\bibitem{yang2019multilingue}
+Yinfei Yang, Daniel Cer, Amin Ahmad, Mandy Guo, Jax Law, Noah Constant, Gustavo Hernandez Abrego, Steve Yuan, Chris Tar, Yun-Hsuan Sung, Brian Strope, Ray Kurzweil
+\textit{Multilingual Universal Sentence Encoder for Semantic Retrieval}, 2019
+
+\bibitem{inbox}
+Douglas Aberdeen, Ondrej Pacovsky  and Andrew Slater\newline
+\textit{The Learning Behind Gmail Priority Inbox}, 2010
+
+\bibitem{ds_pol}
+Ed King.
+\textit{Election Day Tweets}
+\url{https://www.kaggle.com/kinguistics/election-day-tweets?select=election_day_tweets.csv}
+2020
+
+\bibitem{ds_health1}
+Tara Boyle.
+\textit{Medical Transcripts}
+\url{https://www.kaggle.com/tboyle10/medicaltranscriptions}
+2018
+
+\bibitem{ds_health2}
+Paul Mooney.
+\textit{Medical Speech, Transcription, and Intent}
+\url{https://www.kaggle.com/paultimothymooney/medical-speech-transcription-and-intent}
+2019
+
+\bibitem{ds_job}
+Amir
+\textit{Amazon Job skills}
+\url{https://www.kaggle.com/atahmasb/amazon-job-skills}
+2018
+
+\bibitem{ds_travel}
+Figure Eight
+\textit{Twitter US Airline Sentiment}
+\url{https://www.kaggle.com/crowdflower/twitter-airline-sentiment}
+2019
+
+\bibitem{ds_general}
+Rounak Banik
+\textit{The Movies Dataset}
+\url{https://www.kaggle.com/rounakbanik/the-movies-dataset}
+2017
+
+\bibitem{PAalgo}
+Koby Crammer, Ofer Dekel, Joseph Keshet, Shai Shalev-Shwartz, Yoram Singer\newline
+\textit{Online Passive-Aggressive Algorithms}\newline
+Journal of Machine Learning Research 7 (2006) 
+
+\bibitem{RocAUC}
+Hossin, Mohammad and Sulaiman, MN\newline
+\textit{A review on evaluation metrics for data classification evaluations}\newline
+International Journal of Data Mining \& Knowledge Management Process, 2015
+
+\bibitem{wu2017visual}
+Wu, Qi and Teney, Damien and Wang, Peng and Shen, Chunhua and Dick, Anthony and van den Hengel, Anton\newline
+\textit{Computer Vision and Image Understanding}
+Computer Vision and Image Understanding, 2017
+
+\bibitem{kaur2017survey}
+Kaur, Harpreet and Mangat, Veenu and others\newline
+\textit{A survey of sentiment analysis techniques}\newline
+2017 International Conference on I-SMAC (IoT in Social, Mobile, Analytics and Cloud)(I-SMAC)
+
+\bibitem{bengio2003neural}
+Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Jauvin, Christian\newline
+\textit{A neural probabilistic language model}\newline
+Journal of machine learning research, 2003
+
+\bibitem{collobert2008unified}
+Collobert, Ronan and Weston, Jason\newline
+\textit{A unified architecture for natural language processing: Deep neural networks with multitask learning}\newline
+Proceedings of the 25th international conference on Machine learning, 2008
+
+\bibitem{turian2010word}
+Turian, Joseph and Ratinov, Lev and Bengio, Yoshua\newline
+\textit{Word representations: a simple and general method for semi-supervised learning}\newline
+Proceedings of the 48th annual meeting of the association for computational linguistic, 2010
+
+\bibitem{mikolov2013efficient},
+Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey\newline
+\textit{Efficient estimation of word representations in vector space}\newline
+arXiv preprint arXiv:1301.3781, 2013
+
+\bibitem{mikolov2013distributed}
+Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff\newline
+\textit{Distributed representations of words and phrases and their compositionality}\newline
+Advances in neural information processing systems, 2013
+
+\bibitem{mnih2007three}
+Mnih, Andriy and Hinton, Geoffrey\newline
+\textit{Three new graphical models for statistical language modelling}\newline
+Proceedings of the 24th international conference on Machine learning, 2007
+
+\bibitem{wang2019user}
+Wang, Chenyu and Miao, Zhongchen and Lin, Yuefeng and Gao, Jian\newline
+\textit{User and Topic Hybrid Context Embedding for Finance-Related Text Data Mining}\newline
+2019 International Conference on Data Mining Workshops (ICDMW), 2019
+
+\bibitem{yang2019online}
+Yang, Zhibo and Li, Luyun\newline
+\textit{An Online Retrieval Question Answering System for Featured Snippets Triggering}\newline
+2019 International Conference on Data Mining Workshops (ICDMW), 2019
+
+\bibitem{arora2016simple}
+Arora, Sanjeev and Liang, Yingyu and Ma, Tengyu\newline
+\textit{A simple but tough-to-beat baseline for sentence embeddings}
+2016
+
+\bibitem{iyyer2015deep}
+Iyyer, Mohit and Manjunatha, Varun and Boyd-Graber, Jordan and Daum{\'e} III, Hal\newline
+\textit{Deep unordered composition rivals syntactic methods for text classification}\newline
+Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers), 2015
+
+\bibitem{joulin2016fasttext}
+Joulin, Armand and Grave, Edouard and Bojanowski, Piotr and Douze, Matthijs and J{\'e}gou, H{\'e}rve and Mikolov, Tomas\newline
+\textit{Fasttext. zip: Compressing text classification models}\newline
+arXiv preprint arXiv:1612.03651, 2016
+
+\bibitem{chidambaram2018learning}
+M. Chidambaram, Y. Yang, D. Cer, S. Yuan, Y. Sung, B. Strope, and R. Kurzweil. \newline
+\textit{Learning Cross-Lingual Sentence Representations via a Multi-task Dual-Encoder Model.}, 2018
+
+\bibitem{transfer-learning}
+Li, Y., Ngom, A.\newline
+\textit{A review on machine learning principles for multi-view biological data integration. Briefings in bioinformatics}\newline
+2016
+
+\bibitem{q-learning}
+Christopher J. C. H. Watkins, Peter Dayan\newline
+\textit{Q-learning}\newline
+1992
+\bibitem{reinforce-learn}
+Csaba Szepesvári\newline
+\textit{Algorithms for Reinforcement Learning
+Synthesis Lectures on Artificial Intelligence and Machine Learning}\newline
+2010
+
+\bibitem{lstm}
+Martin Wöllmer, Florian Eyben, Alex Graves, Björn Schuller, Gerhard Rigoll \newline
+\textit{Bidirectional LSTM Networks for Context-Sensitive Keyword Detection in a Cognitive Virtual Agent Framework}\newline
+2010
+
+\bibitem{collective-data}
+Zhipeng Cai et al.\newline
+\textit{Collective data-sanitization for preventing sensitive information inference attacks in social networks}.\newline
+In: IEEE Transactions on Dependable and Secure Computing 15.4 (2016), pp. 577–590.
+
+\bibitem{collective-data}
+Zhipeng Cai et al.\newline
+\textit{Collective data-sanitization for preventing sensitive information inference attacks in social networks}\newline
+. In: IEEE Transactions on Dependable and Secure Computing 15.4 (2016), pp. 577–590.
+
+\bibitem{diff-privacy}
+Cynthia Dwork.\newline
+\textit{Differential privacy: A survey of results}.\newline
+In: Interna- tional conference on theory and applications of models of computation. Springer. 2008, pp. 1–19.
+
+\bibitem{urwho}
+Alan Mislove et al. \newline
+\textit{You are who you know: inferring user profiles in online social networks}.\newline
+In: Proceedings of the third ACM international conference on Web search and data mining. 2010, pp. 251–260.
+
+\bibitem{inferr-privacy}
+Jianming He, Wesley W Chu e Zhenyu Victor Liu. \newline
+\textit{Inferring priva- cy information from social networks}.\newline
+In: International Conference on Intelligence and Security Informatics. Springer. 2006, pp. 154–165.
+
+\bibitem{protection-private}
+Bo Luo e Dongwon Lee.\newline
+\textit{On protecting private information in social networks: a proposal}.\newline
+In: 2009 IEEE 25th International Conference on Data Engineering. IEEE. 2009, pp. 1603–1606.
+
+\bibitem{stalking}
+Yuhao Yang et al.\newline
+\textit{Stalking online: on user privacy in social networks}.\newline
+In: Proceedings of the second ACM conference on Data and Application Security and Privacy. 2012, pp. 37–48.
+
 
 \end{thebibliography}
